--- a/My Hobbies.html
+++ b/My Hobbies.html
@@ -9,11 +9,11 @@
 <body>
   <h1>My Hobbies:</h1>
   <li>Basketball</li>
-  <img src="Basketball.jpg" alt="">
+  <img src="Images/Basketball.jpg" alt="">
   <li>Gaming</li>
-  <img src="Gaming.jpg" alt="">
+  <img src="Images/Gaming.jpg" alt="">
   <li>Dog parks</li>
-  <img src="Husky.jpg" alt="">
+  <img src="Images/Husky.jpg" alt="">
 </body>
 
 </html>
