--- a/My Hobbies.html
+++ b/My Hobbies.html
@@ -15,7 +15,7 @@
   <li>Dog parks</li>
   <img src="Images/Husky.jpg" alt="">
   <li>Camping</li>
-  <img src="Images/Outback-camp" alt="">
+  <img src="Images/Outback-camp.jpg" alt="">
 </body>
 
 </html>
